--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Chad Hollman</h1>
+    <h2>Real life Iron Man</h2>
+    <div class="tagline">
+      <h3>What Iron Man does...</h3>
+      <div class="tagline-content">
+        <p>In my spare time I code!</p>
+    </div>
+    <div class="skills">
+      <h3>Things I'm good at</h3>
+      <p>Just a few things I enjoy doing</p>
+      <ul>
+        <li>NodeJS</li>
+        <li>Python</li>
+        <li>C#</li>
+        <li>HTML</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Hit me up!</h3>
+      <p>You can reach me at hollmanc at gmail dot com or find me on <a href="https://github.com/gh0st">GitHub</a></p>
+    </div>
+  </div>
 
   Welcome to the HTML Portfolio Project
 
